--- a/github-user-search/src/index.css
+++ b/github-user-search/src/index.css
@@ -65,4 +65,9 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+  /* src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 }
